# watest

./: Cargo.toml  README.md
src/: cli.rs  engine.rs  main.rs  parser.rs
src/error/: handler.rs  mod.rs
wasm/: add.wasm  add.yaml  arith.wasm  arith.yaml  err.yaml  mult.wasm  mult.yaml  spec.yaml
