[package]
name = "watest"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.18.0"
serde_yaml = "0.8.13"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]

